samples/_failures_safe/1761097885_be4717_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41217186.c: In function ‘main’:
./samples/SAFE/__tmp_41217186.c:147:17: error: expected declaration or statement at end of input
  147 |                 if (matrix_add(&mat1, &mat2, &result)) {
      |                 ^~
./samples/SAFE/__tmp_41217186.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41217186.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41217186.c:147:17: error: expected declaration or statement at end of input
